--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,7 +55,7 @@ body {
 }
 
 mark {
-	background-color: transparent;
+	*/background-color: transparent;*/
 	color: inherit;
 }
 
@@ -98,7 +98,8 @@ input, select, textarea {
 	}
 
 	body {
-		background: #312450;
+		/* Color you see when you scroll far at top*/
+		background: #E8B38C;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -174,11 +175,17 @@ input, select, textarea {
 		margin: 0 0 2em 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h2, h3, h4, h5, h6 {
 		color: #ffffff;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
+	}
+
+	h1 {
+		/*header font color and details*/
+		font-family: 'Permanent Marker', cursive;
+		color: #e8b38c;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -197,10 +204,6 @@ input, select, textarea {
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -2525,7 +2528,7 @@ input, select, textarea {
 			display: block;
 			background: #ffffff;
 			border-radius: 100%;
-			color: #312450;
+			color: #ffffff;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
@@ -2536,19 +2539,19 @@ input, select, textarea {
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: #5e42a6;
+					color: #909E84;
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: #493382;
+					color: #909E84;;
 				}
 
 				.wrapper.style2 .icon.major:before {
-					color: #5052b5;
+					color: #909E84;
 				}
 
 				.wrapper.style2-alt .icon.major:before {
-					color: #3e4094;
+					color: #909E84;
 				}
 
 				.wrapper.style3 .icon.major:before {
@@ -2556,7 +2559,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style3-alt .icon.major:before {
-					color: #953d75;
+					color: #909E84;
 				}
 
 /* Image */
@@ -3240,27 +3243,32 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			/*top secetion background color and bottom*/
+			/*art*/
+			background-color: #909E84;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			/* footer color*/
+			background-color: #F9a66C;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			/*middle 3 turn into various shades of*/
+			background-color: #F17A7E;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #F17A7E;
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			/*Yellow part*/
+			background-color: #E3d447;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #E3d447;
 		}
 
 		.wrapper.fullscreen {
@@ -3524,7 +3532,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #18262f;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3737,7 +3745,7 @@ input, select, textarea {
 			-ms-transition: color 0.2s ease;
 			transition: color 0.2s ease;
 			border: 0;
-			color: rgba(255, 255, 255, 0.35);
+			color: #E8B38C;
 			display: block;
 			font-size: 0.6em;
 			font-weight: bold;
@@ -3761,14 +3769,11 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #3c2c62;
+				background: #18262f;
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background: #18262f;
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3777,11 +3782,11 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:hover {
-				color: rgba(255, 255, 255, 0.55);
+				color: #E3D477;
 			}
 
 			#sidebar nav a.active {
-				color: #ffffff;
+				color: #909E84;
 			}
 
 				#sidebar nav a.active:after {
@@ -3857,7 +3862,8 @@ input, select, textarea {
 
 						#sidebar nav a:after {
 							background-image: none;
-							background-color: #b74e91;
+							/*Line under nav*/
+							background-color: #909e84;
 						}
 
 		}
@@ -3873,8 +3879,9 @@ input, select, textarea {
 /* Intro */
 
 	#intro {
+		background-color: 909E84;
 		background-attachment: fixed;
-		background-image: url("images/intro.svg");
+		/*add image for top part art*/
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
@@ -3882,11 +3889,13 @@ input, select, textarea {
 
 		#intro p {
 			font-size: 1.25em;
+			color: E8B38C;
 		}
 
 			@media screen and (max-width: 980px) {
 
 				#intro p br {
+					color: E8B38C;
 					display: none;
 				}
 
@@ -3895,6 +3904,7 @@ input, select, textarea {
 			@media screen and (max-width: 736px) {
 
 				#intro p {
+					color: E8B38C;
 					font-size: 1em;
 				}
 
@@ -3904,6 +3914,7 @@ input, select, textarea {
 
 			#intro {
 				background-attachment: scroll;
+				background-color: 909E84;
 			}
 
 		}
