Fixed Last Bit of CSS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3401,7 +3401,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #5e42a6;
+		background-color: #e3d477;
 		cursor: default;
 		padding: 1.75em 2em;
 	}
